FLE-1519: Remove dead timeGeneratedField from flusher, quality fixes